# ojichat_rs_discordbot

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
