[package]
name = "ojichat_rs_discordbot"
version = "0.1.0"
authors = ["gamoutatsumi <47162587+gamoutatsumi@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "ojicha-rs-disbot"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
ojichat = "0.1.0"
serenity = { version = "0.9.2", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "0.2", features = ["macros"] }
